# optimize-anything

./: .gitignore  .last_pytest.txt  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONCEPTS.md  EXAMPLES.md  LICENSE  Makefile  PLAN.md  PROTOCOL.md  README.md  SKILL.md  WALKTHROUGH.md  evaluator-cookbook.md  install.md  install.sh  package.json  pyproject.toml  scores.json  tsconfig.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
04/63ae3dfcdc/: metadata.json
12/5c9650ca08/: metadata.json
15/9e283d81b4/: metadata.json
2a/89390c34ff/: metadata.json
3d/8773e9c65e/: metadata.json
3f/7d8159f33f/: metadata.json
40/16afa80602/: metadata.json
5a/89bd43e6da/: metadata.json
75/99a97044e9/: metadata.json
7d/72bb606f38/: metadata.json
83/174226da47/: metadata.json
83/85ac91d1d5/: metadata.json
86/821d85d69b/: metadata.json
9a/ae402227bd/: metadata.json
a8/1844950506/: metadata.json
autoresearch/: eval.sh  program.md  results.tsv
b9/450708586d/: metadata.json
c9/6c25ed46d5/: metadata.json
commands/: analyze.md  budget.md  compare.md  explain.md  generate-evaluator.md  intake.md  optimize.md  quick.md  score.md  validate.md
d5/810026899c/: metadata.json
docs/: evaluator-cookbook.md  install.md  mcp-protocol.md
docs/handoffs/: 2026-02-22-main-handoff.md  2026-02-23-p0-p1-p2-implementation-handoff.md
evaluators/: cookbook_clarity.sh  evaluator_generation_training.sh  evaluator_generation_validation.sh  skill_clarity.sh
examples/: README.md
scripts/: check.py  consecutive_smoke_gate.py  evaluator_http_server.py  live_integration.py  optimization_observer.py  plugin_eval.sh  plugin_regression.py  score_check.py  smoke_harness.py
src/: index.ts  types.ts
tests/: budget.test.ts  candidate-selector.test.ts  cli.test.ts  conftest.py  evaluator.test.ts  events.test.ts  explain.test.ts  index.test.ts  mcp.test.ts  optimizer.test.ts  pareto.test.ts  persistence.test.ts  plugin.test.ts  proposer.test.ts  state.test.ts  stop-conditions.test.ts  test_cli.py  test_dataset.py  test_dependency_safety.py  test_doc_contract.py  test_evaluator_generator.py  test_evaluators.py  test_gates.py  test_intake.py  test_live_integration.py  test_llm_judge.py  test_optimization_observer.py  test_score_check.py  test_server.py  test_spec_loader.py  test_stop.py  types.test.ts
(+253 files in other folders)
