[project]
name = "optimize-anything"
version = "0.1.0"
description = "Optimize any text artifact using gepa — prompts, code, configs, skills"
requires-python = ">=3.10"
dependencies = ["gepa", "httpx", "litellm"]

[project.scripts]
optimize-anything = "optimize_anything.cli:main"

[dependency-groups]
dev = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/optimize_anything"]

[tool.pytest.ini_options]
markers = [
    "integration: live integration tests that call real APIs (deselect with '-m \"not integration\"')",
]
